[tool.poetry]
name = "stardew_chest_layout"
version = "0.1.0"
description = "A python package for optimizing Stardew Valley chest layouts with respect to various weights and biases."
authors = ["Kyle Oliver <56kyleoliver@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
click = "^8.1.3"
beautifulsoup4 = "^4.11.1"
requests = "^2.28.1"
numpy = "^1.23.1"
scipy = "^1.8.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pyinstaller = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
